Remove correspondence author. Redirect to BC - Workflow.
Remove correspondence author when removing same author from article. Redirect to BC Workflow instead of Classic Workflow

--- a/templates/back_content/article.html
+++ b/templates/back_content/article.html
@@ -96,7 +96,7 @@
                                         <tr>
                                             <td>{{ author.full_name }}</td>
                                             <td>{{ author.email }}</td>
-                                            <td><a href="{% url 'delete_author' article.pk author.pk %}"><i
+                                            <td><a href="{% url 'bc_delete_author' article.pk author.pk %}"><i
                                                     class="fa fa-trash">
                                                 &nbsp;</i></a></td>
                                         </tr>
