--- a/templates/back_content/article.html
+++ b/templates/back_content/article.html
@@ -80,7 +80,7 @@
                         <p>{% trans "You can add an author by clicking the button below. This will open a popup modal for you to complete their details." %}</p>
                         <p>{% trans "If you know of an existing author, complete only the email field and they will be added as an author." %}</p>
                         <a href="#" data-open="author" class="small success button">{% trans "Add New Author" %}</a>
-                        {% include "admin/elements/submit/author.html" %}
+                        {% include "back_content/author.html" %}
                     </div>
                     <div class="large-5 columns" data-equalizer-watch>
                         <h4>{% trans "Current Authors" %}</h4>
