--- a/templates/back_content/article.html
+++ b/templates/back_content/article.html
@@ -275,10 +275,16 @@
                         <p>When you are ready to publish your article, press the publish button and it will be
                             published.</p>
                         <div class="large-12 columns">
-                            <form method="POST">
+                            <form class="btn-group" method="POST">
                                 {% csrf_token %}
                                 <button class="success button pull-right" type="submit" name="publish">
                                     <i class="fa fa-check-circle">&nbsp;</i>Publish
+                                </button>
+                                <button class="success button pull-right" type="submit" name="draft">
+                                    <i class="fa fa-check-circle">&nbsp;</i>Save as Draft
+                                </button>
+                                <button class="success button pull-right" type="submit" name="delete">
+                                    <i class="fa fa-check-circle">&nbsp;</i>Delete
                                 </button>
                             </form>
                         </div>
@@ -305,4 +311,13 @@
         {% include "elements/open_modal.html" with target=modal %}
     {% endif %}
     {% include "elements/datepicker.html" with target=".datepicker" %}
+{% endblock %}
+
+{% block css %}
+<style rel="stylesheet">
+    .btn-group > button {
+        margin-left: 6px;
+        margin-right: 6px;
+    }
+</style>
 {% endblock %}
