--- a/templates/back_content/submission.html
+++ b/templates/back_content/submission.html
@@ -85,7 +85,7 @@
                         <div class="large-12 columns">
                             <label for="id_keywords">Keywords</label>
                             <input type="text" id="id_keywords" name="keywords" value="
-                                    {% if article_form.cleaned_data.keywords %}{{ article_form.cleaned_data.keywords }}{% else %}{% for keyword in article.keywords.all %}{{ keyword.word }}{% if not forloop.last %},{% endif %}{% endfor %}{% endif %}"/>
+                                {{ article_form.fields.keywords.initial }}"/>
                             Hit Enter to add a new keyword.
                         </div>
                     </div>
