--- a/templates/back_content/submission.html
+++ b/templates/back_content/submission.html
@@ -11,7 +11,7 @@
 {% block breadcrumbs %}
     {{ block.super }}
     <li><a href="{% url 'bc_index' %}">Back Content Plugin</a></li>
-    <li>{% if article.title %}{{ article.title }}{% else %}New Article{% endif %}</li>
+    <li>{% if article.title %}{{ article.title }}{% else %}{% trans "New Article" %}{% endif %}</li>
 {% endblock breadcrumbs %}
 
 {% block body %}
@@ -20,7 +20,7 @@
             <div class="large-12 columns box">
                 <form method="POST">
                     <div class="title-area">
-                        <h2>1. Add A New Article</h2>
+                        <h2>{% trans "1. Add A New Article" %}</h2>
                     </div>
                     <div class="content">
                         <div class="large-6 columns">
@@ -74,20 +74,20 @@
                             {{ article_form.license.errors }}
                         </div>
                         <div class="large-12 columns">
-                            <label for="id_keywords">Keywords</label>
+                            <label for="id_keywords">{% trans "Keywords" %}</label>
                             <input type="text" id="id_keywords" name="keywords" value="
                                     {% if article_form.cleaned_data.keywords %}{{ article_form.cleaned_data.keywords }}{% else %}{% for keyword in article.keywords.all %}{{ keyword.word }}{% if not forloop.last %},{% endif %}{% endfor %}{% endif %}"/>
-                            Hit Enter to add a new keyword.
+                                    {% trans "Hit Enter to add a new keyword." %}
                         </div>
                         <div class="large-12 columns">
-                            <label for="id_keywords_de">Keywords (de)</label>
+                            <label for="id_keywords_de">{% trans "Keywords (de)" %}</label>
                             <input type="text" id="id_keywords_de" name="keywords_de" value="
                                     {% if article_form.cleaned_data.keywords_de %}{{ article_form.cleaned_data.keywords_de }}{% else %}{% for keyword_de in article.keywords_de.all %}{{ keyword_de.word }}{% if not forloop.last %},{% endif %}{% endfor %}{% endif %}"/>
-                            Hit Enter to add a new keyword.
+                                    {% trans "Hit Enter to add a new keyword." %}
                         </div>
                     </div>
                     <div class="title-area">
-                        <h2>2. Article Authors</h2>
+                        <h2>{% trans "2. Article Authors" %}</h2>
                     </div>
                     <div class="content" data-equalizer data-equalize-on="medium">
                         <div class="large-7 columns" data-equalizer-watch>
@@ -134,20 +134,20 @@
                         </div>
                     </div>      
                     <div class="title-area">
-                        <h2>3. Galleys</h2>
+                        <h2>{% trans "3. Galleys" %}</h2>
                     </div>
                     <div class="content">
                         <table id="upload-table" class="table table-bordered table-condensed small">
                             <tr style="text-align: left">
-                                <th>Label</th>
-                                <th width="25%">Filename</th>
-                                <th>Type</th>
-                                <th>Edit</th>
-                                <th>Download</th>
-                                <th>Replace</th>
-                                <th>History</th>
-                                <th>Create PDF</th>
-                                <th>Create EPUB</th>
+                                <th>{% trans "Label" %}</th>
+                                <th width="25%">{% trans "Filename" %}</th>
+                                <th>{% trans "Type" %}</th>
+                                <th>{% trans "Edit" %}</th>
+                                <th>{% trans "Download" %}</th>
+                                <th>{% trans "Replace" %}</th>
+                                <th>{% trans "History" %}</th>
+                                <th>{% trans "Create PDF" %}</th>
+                                <th>{% trans "Create EPUB" %}</th>
                             </tr>
                             {% for galley in galleys %}
                                 {% can_view_file galley.file as can_view_file_flag %}
@@ -210,15 +210,15 @@
                                 </tr>
                                 {% empty %}
                                 <tr>
-                                    <td colspan="9">No galleys have been uploaded.</td>
+                                    <td colspan="9">{% trans "No galleys have been uploaded." %}</td>
                                 </tr>
                             {% endfor %}
                         </table>
                         <a class="button success float-right" data-open="uploadbox"><i class="fa fa-cloud-upload">
-                            &nbsp;</i>Upload a new galley</a>
+                            &nbsp;</i>{% trans "Upload a new galley" %}</a>
                     </div>
                     <div class="title-area">
-                        <h2>4. Publication Info</h2>
+                        <h2>{% trans "4. Publication Info" %}</h2>
                     </div>
                     <div class="content">
                         <div class="large-4 columns">
@@ -242,16 +242,15 @@
                         </div>
                         <div class="large-12 columns">
                             {% if article and article.date_published %}
-                            <p>More Pub Info is available on the <a href="{% url 'publish_article' article.pk %}">Pre Publication Checklist</a>.</p>
+                            <p>{% trans "More Pub Info is available on the" %}<a href="{% url 'publish_article' article.pk %}">{% trans "Pre Publication Checklist" %}</a>.</p>
                             {% endif %}
                         </div>
                     </div>
                     <div class="title-area">
-                        <h2>5. Remote</h2>
+                        <h2>{% trans "5. Remote" %}</h2>
                     </div>
                     <div class="content">
-                        <p>If your article is remote, you can fill the required details here. If the remote article has
-                            a DOI, you should use it for full resolution. .</p>
+                        <p>{% trans "If your article is remote, you can fill the required details here. If the remote article has a DOI, you should use it for full resolution." %}</p>
                         <div class="row expanded">
                             <div class="large-6 columns">
                                 {{ remote_form.is_remote|foundation }}
@@ -262,11 +261,10 @@
                         </div>
                     </div>
                     <div class="title-area">
-                        <h2>6. Publish</h2>
+                        <h2>{% trans "6. Publish" %}</h2>
                     </div>
                     <div class="content">
-                        <p>When you are ready to publish your article, press the publish button and it will be
-                            published.</p>
+                        <p>{% trans "When you are ready to publish your article, press the publish button and it will be published." %}</p>
                         <div class="large-12 columns">
                             {% csrf_token %}
                             <button class="success button pull-right" type="submit" name="publish">
